--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Cajero Automático</title>
     <script src="https://kit.fontawesome.com/e3aa5a861d.js" crossorigin="anonymous"></script>
 </head>
@@ -18,7 +19,7 @@
             <h1>CAJERO AUTOMÁTICO</h1>
         </div>
         <div class="right-header">
-            <button class="logout">
+            <button class="logout" onclick="cerrarSesion()">
                 <i class="fa-solid fa-right-from-bracket"></i>
                 <p>Cerrar Sesión</p>
             </button>
@@ -26,41 +27,42 @@
     </header>
     <main>
         <section class="opciones">
-            <article class="opcion opcion1">
+            <article class="opcion saldo">
                 <p>CONSULTAR SALDO</p>
             </article>
-            <article class="opcion opcion2">
+            <article class="opcion ingresar">
                 <p>INGRESAR SALDO</p>
             </article>
-            <article class="opcion opcion3">
+            <article class="opcion retirar">
                 <p>RETIRAR SALDO</p>
             </article>
         </section>
         <section class="screen">
             <div class="top-screen">
-                <img src="img/3.jpg" alt="usuario 3">
-                <h2>CUENTA 3</h2>
+                <!-- <img src="img/3.jpg" alt="usuario 3">
+                <h2>CUENTA 3</h2> -->
             </div>
             <div class="btm-screen">
-                <div class="opc-screen none">
+                <div class="opc-screen none show">
                     <p>Selecciona alguna opción</p>
                 </div>
                 <div class="opc-screen saldo-container">
                     <p>Saldo disponible:</p>
-                    <p class="saldo">$300</p>
+                    <p class="saldo-p">$300</p>
                 </div>
                 <div class="opc-screen retirar-container">
                     <p>Saldo a retirar:</p>
                     <input type="number" id="retirar-input">
-                    <button id="retirar-btn" class="btn">Retirar</button>
+                    <button id="retirar-btn" class="btn" onclick="retirarSaldo()">Retirar</button>
                 </div>
-                <div class="opc-screen ingresar-container show">
+                <div class="opc-screen ingresar-container">
                     <p>Saldo a ingresar:</p>
                     <input type="number" id="ingresar-input">
-                    <button id="ingresar-btn" class="btn">Ingresar</button>
+                    <button id="ingresar-btn" class="btn" onclick="ingresarSaldo()">Ingresar</button>
                 </div>
             </div>
         </section>
     </main>
+    <script src="js/index.js"></script>
 </body>
 </html>
