--- a/login.html
+++ b/login.html
@@ -11,7 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/e3aa5a861d.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="css/login.css">
+    <script src="js/login.js"></script>
 </head>
 
 <body>
@@ -23,7 +25,7 @@
         <section class="elegir-cuentas">
             <h2>Elija una cuenta</h2>
             <div class="container-cuentas">
-                <article class="cuenta cuenta1">
+                <!-- <article class="cuenta cuenta1 selected">
                     <img src="img/1.jpg" alt="foto perfil 1">
                     <p>Cuenta 1</p>
                 </article>
@@ -31,23 +33,23 @@
                     <img src="img/2.jpg" alt="foto perfil 2">
                     <p>Cuenta 2</p>
                 </article>
-                <article class="cuenta cuenta3 selected">
+                <article class="cuenta cuenta3">
                     <img src="img/3.jpg" alt="foto perfil 3">
                     <p>Cuenta 3</p>
-                </article>
+                </article> -->
             </div>
         </section>
         <section class="login-container">
             <div class="cuenta-top">
-                <img src="img/3.jpg" alt="foto perfil 3">
-                <p>CUENTA 3</p>
+                <!-- <img src="img/3.jpg" alt="foto perfil 3">
+                <p>CUENTA 3</p> -->
             </div>
             <div class="ctnr-password">
                 <p>CONTRASEÑA:</p>
                 <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
             </div>
             <div class="join">
-                <button class="ingresar">
+                <button class="ingresar" onclick="validarLogin()">
                     <i class="fa-solid fa-right-to-bracket"></i>
                     <p>Ingresar</p>
                 </button>
