--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Cajero Automático</title>
+    <link rel="icon" href="img/logo.png">
     <script src="https://kit.fontawesome.com/e3aa5a861d.js" crossorigin="anonymous"></script>
 </head>
 <body>
