--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="css/login.css">
     <script src="js/login.js"></script>
+    <link rel="icon" href="img/logo.png">
 </head>
 
 <body>
